Splits out the JS into separate files. Now checks for nulls and skirts errors with higher token limits, better messaging, flexible response handling, and handling truncated responses.

--- a/01multimodal-ai/index.html
+++ b/01multimodal-ai/index.html
@@ -81,6 +81,7 @@
     <p>Background pattern by <a href="https://www.freepik.com/free-vector/sweet-pattern-random_1891920.htm" target="_blank" rel="noopener noreferrer">Amonrat Rungreangfangsai</a> on Freepik</p>
   </footer>
 
-  <script src="script.js"></script>
+  <!-- Load all JavaScript modules via loader -->
+  <script src="js/loader.js"></script>
 </body>
 </html>
